src/objects/Group__c.object
<CustomObject>
    <description>Construct that represents a group of People. Used by features including Agriculture Information channel, survey assignment, bulk SMS.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this group active?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Count__c</fullName>
        <description>The number of people that are in this group. Value is calculated daily by Apex.</description>
        <label>Membership Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Query__c</fullName>
        <description>SOQL query that defines the group membership</description>
        <label>Membership Query</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Need_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signify that the group needs to check its membership and update it if the box is checked. Can only update a group if it has a membership query assigned to.</description>
        <label>Need Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>